# restcountriesAPI

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
countriesAPI/: app.py  db_cli.py  model.py
countriesAPI/apitest/: apitest.py
countriesAPI/tests/: test_app.py
