[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
dynamic = ["version"]
name = "countriesAPI"
dependencies = [
    "fastapi",
    "hypercorn",
    "click",
    "requests",
    "pymongo",
    "pytest",
    "pytest-asyncio",
    "grequests"
]

[project.scripts]
countries_api_db = "countriesAPI.db_cli:cli"

[tool.setuptools.packages]
find = {}
